# Cynth

./: .gitattributes  CMakeLists.txt  main.cy
src/: main.c
